# GNU_Linux_Dev

01_Terminal/: Class.c  Show.c  teacher.c
01_TerminalProject/: Makefile  Show  Show.c
02_Multifile/: Makefile  README  outfile1  prog  prog-a  prog-so  prog.c
04_Debugging/: Makefile  gdb_script_1.txt  gdb_script_2.txt  range.c  standart_1.txt  standart_2.txt
05_Regexps/: Makefile  esub  esub.c
06_Tracing/: .move.c.swp  ethalon_infile  makefile  move.c  remove_custom.c  tester.sh
07_Environmental/: Makefile  Makefile.am  configure.ac
07_Environmental/src/: rhasher.c
